@@ -1,3 +1,6 @@
+2016-12-08         [RELEASE] Release of youtube_privacy 1.0.2 (Nicole Cordes)
+2016-12-08 9053363 [TASK] Rename extension key (Nicole Cordes)
+
 2016-12-08         [RELEASE] Release of youtube 1.0.1 (Nicole Cordes)
 2016-12-08 5c9f844 [TASK] Add Readme.md file (Nicole Cordes)
 
